--- a/fonts.css
+++ b/fonts.css
@@ -11,3 +11,17 @@
          url('./fonts/Montserrat/montserrat-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
          url('./fonts/Montserrat/montserrat-v13-latin-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
   }
+
+  /* kaushan-script-regular - latin */
+@font-face {
+    font-family: 'Kaushan Script';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/Kaushan/kaushan-script-v8-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local('Kaushan Script'), local('KaushanScript-Regular'),
+         url('./fonts/Kaushan/kaushan-script-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('./fonts/Kaushan/kaushan-script-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('./fonts/Kaushan/kaushan-script-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('./fonts/Kaushan/kaushan-script-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('./fonts/Kaushan/kaushan-script-v8-latin-regular.svg#KaushanScript') format('svg'); /* Legacy iOS */
+  }
